--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                      <h1 class="cycles_text">Cycles</h1>
                      <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
                      <div class="btn_main">
-                        <div class="buy_bt"><a href="#">Buy Now</a></div>
+                        <div class="buy_bt"><a href="#">Buy Now!</a></div>
                         <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">200</span></h4>
                      </div>
                   </div>
@@ -165,7 +165,7 @@
                      <h1 class="cycles_text">Stylis Cycle</h1>
                      <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
                      <div class="btn_main">
-                        <div class="buy_bt"><a href="#">Buy Now</a></div>
+                        <div class="buy_bt"><a href="#">Buy Now!</a></div>
                         <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">200</span></h4>
                      </div>
                   </div>
@@ -186,10 +186,10 @@
                      </div>
                   </div>
                   <div class="col-md-6">
-                     <h1 class="cycles_text">Mordern <br>Cycle</h1>
+                     <h1 class="cycles_text">Modern <br>Cycle</h1>
                      <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
                      <div class="btn_main">
-                        <div class="buy_bt"><a href="#">Buy Now</a></div>
+                        <div class="buy_bt"><a href="#">Buy Now!</a></div>
                         <h4 class="price_text">Price <span style=" color: #f7c17b">$</span> <span style=" color: #325662">200</span></h4>
                      </div>
                   </div>
@@ -357,9 +357,9 @@
                   </div>
                </div>
                <div class="col-lg-4 col-sm-12">
-                  <div class="call_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_0">Page when looking at its layou</span></a></div>
-                  <div class="call_text"><a href="#"><img src="images/call-icon.png"><span class="padding_left_0">Call Now  +01 123467890</span></a></div>
-                  <div class="call_text"><a href="#"><img src="images/mail-icon.png"><span class="padding_left_0">demo@gmail.com</span></a></div>
+                  <div class="call_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_0">Page when looking at its layout</span></a></div>
+                  <div class="call_text"><a href="#"><img src="images/call-icon.png"><span class="padding_left_0">Call Now  +571 3976762</span></a></div>
+                  <div class="call_text"><a href="#"><img src="images/mail-icon.png"><span class="padding_left_0">kayebrit@gmail.com</span></a></div>
                   <div class="social_icon">
                      <ul>
                         <li><a href="#"><img src="images/fb-icon1.png"></a></li>
